--- a/my_store/app/views/layouts/application.html.erb
+++ b/my_store/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>MyStore</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"> </script>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
